--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "python-template"
+name = "domain-m=name-checker"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "tool to check domain name"
+authors = ["Rahul Lodhi ig - @var_rahul"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.11"
